# zalary

./: .gitignore  .vercelignore  Anchor.toml  BUSINESS.md  LICENSE  PRIVACY.md  README.md  SUBMISSION.md
app/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
app/api/: faucet.ts
app/scripts/: README.md  seed-devnet.ts  umbra-smoke.ts
app/src/: App.tsx  index.css  main.tsx  proposal.css
app/src/components/: AnalyticsBanner.tsx  Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  ConfidentialStatusPill.tsx  DemoBanner.tsx  HeliusLiveBanner.tsx  Icons.tsx  Logo.tsx  ScreenNav.tsx  ShieldedBalanceCard.tsx  ShieldedInbox.tsx  TopNav.tsx  UmbraStatusPill.tsx  WalletName.tsx  WalletPill.tsx
app/src/contexts/: ConfidentialProvider.tsx  PrivyProvider.tsx  RoleContext.tsx  UmbraProvider.tsx  WalletProvider.tsx
app/src/hooks/: useDemoMode.ts  useHeliusLogStream.ts  usePrivyEmbeddedWallet.ts  useProgram.ts
app/src/lib/: arcium.ts  confidential.ts  covalent-balances.ts  covalent-multichain.ts  covalent-pricing.ts  covalent.ts  env.ts  helius-enhanced.ts  helius.ts  history.ts  kit-wallet.ts  moonpay.ts  payroll-invites.ts  phantom.ts  privy.ts  program-activity.ts  program.ts  send-plan.ts  (+8 more)
docs/: zalary-architecture.excalidraw
dune/: ZALARY_DUNE.md
dune/queries/: 01_usdc_daily_volume.sql  02_token2022_adoption.sql  03_contractor_band_transfers.sql  04_new_recipients_per_day.sql  05_payroll_size_distribution.sql  06_payday_cadence.sql
programs/zalary/: Cargo.toml
programs/zalary/src/: errors.rs  lib.rs  state.rs
tests/: zalary.ts
(+17 files in other folders)
